style: print alignment fix

--- a/src/assets/scss/folds/_experience.scss
+++ b/src/assets/scss/folds/_experience.scss
@@ -127,6 +127,10 @@
 			@include mscr($stage-d) {
 				text-align: left;
 			}
+
+			@media print {
+				text-align: left;
+			}
 		}
 
 		&__company {
